added a condition for fetching data from ext api in TriviaService + replaced h2 config with postgres config to persist data and avoid unnecessary external calls + added docker-compose for postgres db + replaced application.properties with application.yml, aim for support multiple profile configurations

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>web-api-graphql</description>
     <properties>
         <java.version>17</java.version>
+        <postgres-driver>42.7.3</postgres-driver>
+        <hibernate-validator>7.0.3.Final</hibernate-validator>
     </properties>
     <dependencies>
         <dependency>
@@ -25,13 +27,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- Database dependencies -->
+
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.2.224</version> <!-- please use the latest available version -->
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres-driver}</version>
         </dependency>
 
+        <!-- JPA/Hibernate dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -40,8 +45,9 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>7.0.3.Final</version>
+            <version>${hibernate-validator}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -53,11 +59,7 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.5.0</version>
-        </dependency>
+
         <!-- Test dependencies -->
 
         <dependency>
